Feat: Completed Weather report Home Completed User Data Local Store Removed: Login and registration

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -15,13 +15,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/login" Match="NavLinkMatch.All">
-                <i class="fa fa-user w3-large w3-padding" aria-hidden="true"></i> Login
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/register" Match="NavLinkMatch.All">
-                <i class="fa fa-user-plus w3-large w3-padding" aria-hidden="true"></i> Register
+            <NavLink class="nav-link" href="/userDataCache" Match="NavLinkMatch.All">
+                <i class="fa fa-user w3-large w3-padding" aria-hidden="true"></i> Store/Edit Cached Data
             </NavLink>
         </div>
         <div class="nav-item px-3">
