--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -37,7 +37,7 @@
 </div>
 @if (WeatherResponse != null)
 {
-    <div class="weather-card">
+    <div class="weather-mini-card">
         <div class="weather-header">
             <h3>@WeatherResponse.location.name, @WeatherResponse.location.country</h3>
             <p>@WeatherResponse.report.last_updated</p>
